# agno

./: .dockerignore  Cargo.toml  Dockerfile  README.md  agent.toml  build.rs  memory.db  team.toml  team_dag.toml  team_fsm.toml  team_fsm_memory.db  team_memory.db  team_parallel.toml  workflow.toml
examples/: README.md  client_test.rs  deploy_agent.rs  deploy_example.sh  deploy_team.rs  grpc_client.rs  multi_agent_client.rs  simple_agent.rs  team_example.rs
proto/: agent.proto
src/: cli.rs  config.rs  lib.rs  main.rs
src/agent/: agent.rs  context.rs  mod.rs
src/deploy/: mod.rs  server.rs
src/grpc/: mod.rs
src/memory/: in_memory.rs  memory_trait.rs  mod.rs  sqlite.rs
src/model/: mod.rs  model_trait.rs  openai.rs
src/team/: dispatcher.rs  mod.rs  team.rs
src/tests/: team_test.rs
src/tool/: mod.rs  tool_traits.rs
src/tool/builtin/: echo.rs  math.rs  mod.rs  search.rs
src/workflow/: mod.rs  runner.rs  state.rs  workflow_trait.rs
