[package]
name = "helixor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
dotenv = "0.15"
meval = "0.2"
urlencoding = "2.1.3"
rusqlite = { version = "0.36.0", features = ["bundled"] } # or "0.29" if "bundled" fails
chrono = "0.4"