[package]
name = "helixor"
version = "0.1.0"
edition = "2021"
description = "A powerful multi-agent framework for building AI agents and teams"
license = "MIT"
repository = "https://github.com/yourusername/helixor"
keywords = ["ai", "agent", "llm", "multi-agent", "workflow"]
categories = ["ai", "api-bindings"]

[lib]
name = "helixor"
path = "src/lib.rs"

[[bin]]
name = "helixor"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.11"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.12.20", features = ["json", "blocking"] }
dotenv = "0.15"
meval = "0.2"
urlencoding = "2.1.3"
rusqlite = { version = "0.36.0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"